2020-11-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/*/*.c: Replace u_log_message macro with geda_log:

        * src/object/o_net.c
        * src/object/o_slot.c

    * src/iface/i_command.c: Revise cmd_do_page_revert_all; add subfunction
      revert_command_finalizer to log the event.

2020-11-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/*/*.c: Replace u_log_message macro with geda_log:

        * src/object/o_complex.c
        * src/object/o_undo.c
        * src/x/x_autonumber.c
        * src/x/x_rc.c

    * src/x/x_settings_dialog.c: Update on_change_renderer to work with
      GedaComboBox instead of GtkComboBox.

    * tests/runtest.sh: Revise do_process_input to output a message reporting
      which test failed.

2020-11-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/*/*.c: Replace u_log_message macro with geda_log:

        * base/gschem_parsecmd.c
        * src/guile/g_funcs.c
        * src/guile/g_util.c
        * src/object/o_complex.c
        * src/object/o_slot.c

2020-11-14 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations.
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations.
    * po/es.po: Update Spanish translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/nl.po: Update Dutch translations.

2020-11-07 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations.
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations.
    * po/es.po: Update Spanish translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/nl.po: Update Dutch translations.

2020-10-31 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.